--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@apaarmeet/medium-common": "^1.0.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "dotenv": "^16.5.0",
     "hono": "^4.7.9",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.7.0"
+    "prisma": "^6.7.0",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "wrangler": "^4.4.0"
