--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@apaarmeet/medium-common": "^1.0.0",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "axios": "^1.9.0",
+    "primereact": "^10.9.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "slate": "^0.114.0",
+    "slate-react": "^0.114.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
